--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -22,7 +22,8 @@
     <properties>
         <!-- Build properties -->
         <maven.version>3.0.0</maven.version>
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
+        <!--        <java.version>11</java.version>-->
         <node.version>v10.15.3</node.version>
         <npm.version>6.9.0</npm.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -498,11 +499,11 @@
                             <image>gateway:latest</image>
                         </to>
                         <container>
-                            <entrypoint>
-                                <shell>sh</shell>
-                                <option>-c</option>
-                                <arg>chmod +x /entrypoint.sh &amp;&amp; sync &amp;&amp; /entrypoint.sh</arg>
-                            </entrypoint>
+<!--                            <entrypoint>-->
+<!--                                <shell>sh</shell>-->
+<!--                                <option>-c</option>-->
+<!--                                <arg>chmod +x /entrypoint.sh &amp;&amp; sync &amp;&amp; /entrypoint.sh</arg>-->
+<!--                            </entrypoint>-->
                             <ports>
                                 <port>8080</port>
                             </ports>
