--- a/uaa/pom.xml
+++ b/uaa/pom.xml
@@ -22,7 +22,8 @@
     <properties>
         <!-- Build properties -->
         <maven.version>3.0.0</maven.version>
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
+<!--        <java.version>11</java.version>-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <project.testresult.directory>${project.build.directory}/test-results</project.testresult.directory>
@@ -539,11 +540,11 @@
                             <image>uaa:latest</image>
                         </to>
                         <container>
-                            <entrypoint>
-                                <shell>sh</shell>
-                                <option>-c</option>
-                                <arg>chmod +x /entrypoint.sh &amp;&amp; sync &amp;&amp; /entrypoint.sh</arg>
-                            </entrypoint>
+<!--                            <entrypoint>-->
+<!--                                <shell>sh</shell>-->
+<!--                                <option>-c</option>-->
+<!--                                <arg>chmod +x /entrypoint.sh &amp;&amp; sync &amp;&amp; /entrypoint.sh</arg>-->
+<!--                            </entrypoint>-->
                             <ports>
                                 <port>9999</port>
                             </ports>
