Add sevicea and serviceb configuration to central-server-config, change port in servicea mysql database to resolve conflict with uaa mysql database.

--- a/servicea/pom.xml
+++ b/servicea/pom.xml
@@ -578,7 +578,8 @@
                         <changeLogFile>${project.basedir}/src/main/resources/config/liquibase/master.xml</changeLogFile>
                         <diffChangeLogFile>${project.basedir}/src/main/resources/config/liquibase/changelog/${maven.build.timestamp}_changelog.xml</diffChangeLogFile>
                         <driver>com.mysql.cj.jdbc.Driver</driver>
-                        <url>jdbc:mysql://localhost:3306/servicea</url>
+<!--                        <url>jdbc:mysql://localhost:3306/servicea</url>-->
+                        <url>jdbc:mysql://localhost:3307/servicea</url>
                         <defaultSchemaName>servicea</defaultSchemaName>
                         <username>root</username>
                         <password></password>
