--- a/servicea/src/main/docker/app.yml
+++ b/servicea/src/main/docker/app.yml
@@ -8,19 +8,20 @@ services:
       - MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED=true
       - SPRING_CLOUD_CONSUL_HOST=consul
       - SPRING_CLOUD_CONSUL_PORT=8500
-      - SPRING_DATASOURCE_URL=jdbc:mysql://servicea-mysql:3306/servicea?useUnicode=true&characterEncoding=utf8&useSSL=false
+#      - SPRING_DATASOURCE_URL=jdbc:mysql://servicea-mysql:3306/servicea?useUnicode=true&characterEncoding=utf8&useSSL=false
+      - SPRING_DATASOURCE_URL=jdbc:mysql://servicea-mysql:3307/servicea?useUnicode=true&characterEncoding=utf8&useSSL=false
       - JHIPSTER_SLEEP=10 # gives time for the database to boot before the application
   servicea-mysql:
     extends:
       file: mysql.yml
       service: servicea-mysql
-  consul:
-    image: consul:1.4.4
-    command: consul agent -dev -ui -client 0.0.0.0
-    ports:
-      - 8300:8300
-      - 8500:8500
-      - 8600:8600
+#  consul:
+#    image: consul:1.4.4
+#    command: consul agent -dev -ui -client 0.0.0.0
+#    ports:
+#      - 8300:8300
+#      - 8500:8500
+#      - 8600:8600
 
   consul-config-loader:
     image: jhipster/consul-config-loader:v0.3.0
