Add sevicea and serviceb to docker compose config.

--- a/docker-compose/.yo-rc.json
+++ b/docker-compose/.yo-rc.json
@@ -2,6 +2,8 @@
   "generator-jhipster": {
     "appsFolders": [
       "gateway",
+      "servicea",
+      "serviceb",
       "uaa"
     ],
     "directoryPath": "../",
