--- a/uaa/.yo-rc.json
+++ b/uaa/.yo-rc.json
@@ -27,6 +27,7 @@
     "otherModules": [],
     "enableTranslation": false,
     "clientPackageManager": "npm",
-    "skipClient": true
+    "skipClient": true,
+    "enableHibernateCache": false
   }
 }
