--- a/uaa/pom.xml
+++ b/uaa/pom.xml
@@ -534,11 +534,11 @@
                             <image>uaa:latest</image>
                         </to>
                         <container>
-                            <entrypoint>
-                                <shell>sh</shell>
-                                <option>-c</option>
-                                <arg>chmod +x /entrypoint.sh &amp;&amp; sync &amp;&amp; /entrypoint.sh</arg>
-                            </entrypoint>
+<!--                            <entrypoint>-->
+<!--                                <shell>sh</shell>-->
+<!--                                <option>-c</option>-->
+<!--                                <arg>chmod +x /entrypoint.sh &amp;&amp; sync &amp;&amp; /entrypoint.sh</arg>-->
+<!--                            </entrypoint>-->
                             <ports>
                                 <port>9999</port>
                             </ports>
